--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,5 +50,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.fragment:fragment-ktx:1.5.4'
-
+   // implementation 'androidx.compose.material:material-icons-core:1.3.0'
+    implementation "com.google.android.material:material:$version"
 }
