--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,7 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.fragment:fragment-ktx:1.5.4'
    // implementation 'androidx.compose.material:material-icons-core:1.3.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     implementation "com.google.android.material:material:$version"
 }
